<package>
  <name>correspondence_rviz_plugin</name>
  <version>1.0.0</version>
  <description>RViz plugin to display lines between point correspondences in two point clouds.</description>
  <author email="ywang1040@ucr.edu">Yipeng Wang</author>
  <maintainer email="hteng007@ucr.edu">Hanzhe Teng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>